cluster/apps/traefik/middlewares.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-https
  namespace: traefik
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: default-headers
  namespace: traefik
spec:
  headers:
    browserXssFilter: true
    contentTypeNosniff: true
    customResponseHeaders:
      server: ""
      x-applicationversion: ""
      x-ua-compatible: ""
      x-robots-tag: none
    frameDeny: true
    customFrameOptionsValue: SAMEORIGIN
    sslRedirect: true
    stsSeconds: 31536000
    stsPreload: true
    forceSTSHeader: true
    referrerPolicy: no-referrer
    isDevelopment: false
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: http-headers
  namespace: traefik
spec:
  headers:
    browserXssFilter: true
    contentTypeNosniff: true
    customResponseHeaders:
      server: ""
      x-applicationversion: ""
      x-ua-compatible: ""
      x-robots-tag: none
    frameDeny: true
    customFrameOptionsValue: SAMEORIGIN
    sslRedirect: false
    stsSeconds: 31536000
    stsPreload: true
    forceSTSHeader: true
    referrerPolicy: no-referrer
    isDevelopment: false
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: default-compress
  namespace: traefik
spec:
  compress: {}
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: default-middlewares-chain
  namespace: traefik
spec:
  chain:
    middlewares:
    - name: traefik-sso
    - name: default-headers
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: external-middlewares-chain
  namespace: traefik
spec:
  chain:
    middlewares:
    - name: default-compress
    - name: default-headers
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: int-middlewares-chain
  namespace: traefik
spec:
  chain:
    middlewares:
    - name: default-compress
    - name: http-headers
