cluster/apps/traefik/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: web
  namespace: traefik
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: HostRegexp(`{any:.+}`)
    priority: 10
    services:
    - kind: TraefikService
      name: noop@internal
    middlewares:
    - name: redirect-https
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: websecure
  namespace: traefik
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`in.${DOMAIN}`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
    services:
    - kind: TraefikService
      name: api@internal
    middlewares:
    - name: default-middlewares-chain
  - match: Host(`in.${DOMAIN}`) && PathPrefix(`/ping`)
    kind: Rule
    services:
    - name: ping@internal
      kind: TraefikService
    middlewares:
    - name: default-middlewares-chain
  tls:
    secretName: nathanpawelek-com-tls
    options:
      name: secure-tlsoptions
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-forward-auth
  namespace: traefik
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`auth.${DOMAIN}`)
    kind: Rule
    services:
    - name: traefik-forward-auth
      namespace: traefik
      port: 4181
    middlewares:
    - name: traefik-sso
  tls:
    secretName: auth-nathanpawelek-com-tls
    options:
      name: secure-tlsoptions
